[gd_scene load_steps=2 format=3 uid="uid://bgflm2vwp10yo"]

[ext_resource type="Script" path="res://Scripts/PlayerHandler.gd" id="1_us5uw"]

[node name="Control" type="ColorRect"]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.520648, 0.0503739, 0.156565, 1)
script = ExtResource("1_us5uw")

[node name="NameField" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 192.0
offset_top = -348.0
offset_right = -192.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreField" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.356
anchor_right = 0.8
anchor_bottom = 0.459
offset_top = -0.480011
offset_bottom = 0.279968
theme_override_font_sizes/font_size = 72
horizontal_alignment = 1
vertical_alignment = 1

[node name="IncreaseScoreButton" type="Button" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 576.0
offset_right = 642.0
offset_bottom = 640.0
text = "Increase"

[node name="DecreaseScoreButton" type="Button" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 576.0
offset_right = 400.0
offset_bottom = 640.0
text = "Decrease"

[connection signal="button_up" from="IncreaseScoreButton" to="." method="_on_increase_score_button_button_up"]
[connection signal="button_up" from="DecreaseScoreButton" to="." method="_on_decrease_score_button_button_up"]
